--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>My first git project</title>
 </head>
 <body>
+    <h1>Hello Accio</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, magnam!</p>
     
 </body>
 </html>
